[gd_scene load_steps=7 format=3 uid="uid://bw3ermf2gcx6i"]

[ext_resource type="Script" path="res://level_6.gd" id="1_4co2q"]
[ext_resource type="SpriteFrames" uid="uid://dkg5r587rtpur" path="res://Assets/sky_anim.tres" id="2_0yns7"]
[ext_resource type="TileSet" uid="uid://bt37p25lfubdf" path="res://Scenes/Levels/level_tileset.tres" id="3_8uj8k"]
[ext_resource type="PackedScene" uid="uid://df7i4jhygdk7l" path="res://Scenes/placeable_area.tscn" id="4_mxqoq"]
[ext_resource type="PackedScene" uid="uid://doiabxb1tqnvy" path="res://Scenes/level_title.tscn" id="5_6il5y"]
[ext_resource type="Texture2D" uid="uid://bj8o54qsaipet" path="res://Assets/tree.png" id="6_887kg"]

[node name="level_6" type="Node2D"]
script = ExtResource("1_4co2q")

[node name="bg" type="AnimatedSprite2D" parent="."]
texture_filter = 3
position = Vector2(560.5, 307.5)
scale = Vector2(18.5156, 10.6094)
sprite_frames = ExtResource("2_0yns7")
speed_scale = 0.5

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("3_8uj8k")
format = 2
layer_0/tile_data = PackedInt32Array(2359296, 0, 0, 2359297, 0, 0, 2293761, 0, 0, 2293762, 0, 0, 2293763, 0, 0, 2293764, 0, 0, 2293765, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2359345, 0, 0, 2359346, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2359353, 0, 0, 2359354, 0, 0, 2359355, 0, 0, 2359356, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0, 2424896, 0, 0, 2424897, 0, 0, 2424898, 0, 0, 2424899, 0, 0, 2424900, 0, 0, 2424901, 0, 0, 2424902, 0, 0, 2424903, 0, 0, 2490439, 0, 0, 2555975, 0, 0, 2621511, 0, 0, 2621510, 0, 0, 2621509, 0, 0, 2621508, 0, 0, 2621507, 0, 0, 2687043, 0, 0, 2687042, 0, 0, 2687041, 0, 0, 2687040, 0, 0, 2687039, 0, 0, 2687038, 0, 0, 2687037, 0, 0, 2687036, 0, 0, 2687035, 0, 0, 2687034, 0, 0, 2687033, 0, 0, 2687032, 0, 0, 2687031, 0, 0, 2687030, 0, 0, 2687029, 0, 0, 2687028, 0, 0, 2687027, 0, 0, 2687026, 0, 0, 2687025, 0, 0, 2687024, 0, 0, 2687023, 0, 0, 2687022, 0, 0, 2687021, 0, 0, 2687020, 0, 0, 2687019, 0, 0, 2687018, 0, 0, 2687017, 0, 0, 2687016, 0, 0, 2687015, 0, 0, 2687014, 0, 0, 2687013, 0, 0, 2687012, 0, 0, 2687011, 0, 0, 2687010, 0, 0, 2687009, 0, 0, 2687008, 0, 0, 2687007, 0, 0, 2687006, 0, 0, 2687005, 0, 0, 2687004, 0, 0, 2687003, 0, 0, 2687002, 0, 0, 2687001, 0, 0, 2687000, 0, 0, 2686999, 0, 0, 2686998, 0, 0, 2686997, 0, 0, 2686996, 0, 0, 2686995, 0, 0, 2686994, 0, 0, 2686993, 0, 0, 2686992, 0, 0, 2686991, 0, 0, 2686990, 0, 0, 2686989, 0, 0, 2686988, 0, 0, 2686987, 0, 0, 2686986, 0, 0, 2686985, 0, 0, 2686984, 0, 0, 2686983, 0, 0, 2686982, 0, 0, 2686981, 0, 0, 2686980, 0, 0, 2686979, 0, 0, 2686978, 0, 0, 2686977, 0, 0, 2686976, 0, 0, 2621440, 0, 0, 2686975, 0, 0, 2621439, 0, 0, 2555903, 0, 0, 2490367, 0, 0, 2424831, 0, 0, 2424842, 0, 0, 2424841, 0, 0, 2424840, 0, 0, 2424839, 0, 0, 2424838, 0, 0, 2424837, 0, 0, 2424836, 0, 0, 2359300, 0, 0, 2359299, 0, 0, 2359298, 0, 0, 2424834, 0, 0, 2424833, 0, 0, 2424832, 0, 0, 2490368, 0, 0, 2555904, 0, 0, 2555905, 0, 0, 2490369, 0, 0, 2490370, 0, 0, 2555906, 0, 0, 2621442, 0, 0, 2621441, 0, 0, 2621443, 0, 0, 2555907, 0, 0, 2490371, 0, 0, 2424835, 0, 0, 2490372, 0, 0, 2555908, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2555909, 0, 0, 2490373, 0, 0, 2490374, 0, 0, 2555910, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2555911, 0, 0, 2490375, 0, 0, 2490376, 0, 0, 2555912, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2555913, 0, 0, 2490377, 0, 0, 2490378, 0, 0, 2555914, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 2555915, 0, 0, 2490379, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2490380, 0, 0, 2555916, 0, 0, 2621452, 0, 0, 2621453, 0, 0, 2555917, 0, 0, 2490381, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2490382, 0, 0, 2555918, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 2555919, 0, 0, 2490383, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2490384, 0, 0, 2555920, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2555921, 0, 0, 2490385, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2490386, 0, 0, 2555922, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2555923, 0, 0, 2490387, 0, 0, 2424851, 0, 0, 2490388, 0, 0, 2555924, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2555925, 0, 0, 2490389, 0, 0, 2490390, 0, 0, 2555926, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2555927, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2555928, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2555929, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2555930, 0, 0, 2621466, 0, 0, 2621467, 0, 0, 2555931, 0, 0, 2490395, 0, 0, 2555932, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621482, 0, 0, 2621483, 0, 0, 2621484, 0, 0, 2555949, 0, 0, 2621485, 0, 0, 2621486, 0, 0, 2555950, 0, 0, 2490415, 0, 0, 2555951, 0, 0, 2621487, 0, 0, 2621488, 0, 0, 2555952, 0, 0, 2490416, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2490417, 0, 0, 2555953, 0, 0, 2621489, 0, 0, 2621490, 0, 0, 2555954, 0, 0, 2490418, 0, 0, 2490419, 0, 0, 2555955, 0, 0, 2621491, 0, 0, 2621492, 0, 0, 2555956, 0, 0, 2490420, 0, 0, 2490421, 0, 0, 2555957, 0, 0, 2621493, 0, 0, 2621494, 0, 0, 2555958, 0, 0, 2490422, 0, 0, 2490423, 0, 0, 2555959, 0, 0, 2621495, 0, 0, 2621496, 0, 0, 2555960, 0, 0, 2490424, 0, 0, 2490425, 0, 0, 2555961, 0, 0, 2621497, 0, 0, 2621498, 0, 0, 2555962, 0, 0, 2490426, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2490427, 0, 0, 2555963, 0, 0, 2621499, 0, 0, 2621500, 0, 0, 2555964, 0, 0, 2490428, 0, 0, 2424892, 0, 0, 2490429, 0, 0, 2555965, 0, 0, 2621501, 0, 0, 2621502, 0, 0, 2555966, 0, 0, 2490430, 0, 0, 2490431, 0, 0, 2555967, 0, 0, 2621503, 0, 0, 2621504, 0, 0, 2555968, 0, 0, 2490432, 0, 0, 2490433, 0, 0, 2555969, 0, 0, 2621505, 0, 0, 2621506, 0, 0, 2555970, 0, 0, 2490434, 0, 0, 2490435, 0, 0, 2555971, 0, 0, 2555972, 0, 0, 2490436, 0, 0, 2490437, 0, 0, 2555973, 0, 0, 2555974, 0, 0, 2490438, 0, 0)

[node name="FirePit" type="Node2D" parent="."]
position = Vector2(597, 614)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="placeable_area" parent="." instance=ExtResource("4_mxqoq")]
offset_left = 58.0
offset_top = 25.0
offset_right = 1086.0
offset_bottom = 537.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(5, 654, 3, 579, 15, 579, 17, 559, 96, 560, 96, 576, 335, 576, 335, 593, 431, 592, 432, 610, 447, 608, 447, 623, 464, 625, 465, 641, 496, 641, 497, 653, 673, 655, 673, 655, 673, 640, 721, 641, 721, 624, 753, 624, 753, 609, 770, 608, 769, 593, 785, 593, 785, 577, 815, 577, 816, 593, 913, 593, 913, 576, 975, 576, 976, 592, 1152, 592, 1151, 651, 14, 664)

[node name="title" parent="." instance=ExtResource("5_6il5y")]
text = "
[center][wave]Put out the Fire!"

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PackedVector2Array(16, 4, 330, 70, 540, 31, 657, 46, 722, 63, 760, 42, 759, -5, 871, -22, 989, 28, 1054, 106, 1118, 111, 1142, 253, 1160, 347, 1103, 660, 1228, 557, 1196, -46, -36, -26)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(590.5, 187.5)
scale = Vector2(19.4531, 14.9844)
texture = ExtResource("6_887kg")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
